--- a/frontend/index.html
+++ b/frontend/index.html
@@ -305,6 +305,11 @@
             <section class="resume-section" id="certifications">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Certifications</h2>
+
+                    <a href="https://www.credly.com/badges/0bfb947f-f284-4ae4-8fd0-6a84e1675b28/public_url">
+                        <img src="assets/img/azure900.png">
+                    </a>
+
                     <a href="https://www.credly.com/earner/earned/badge/7ebb00ef-6732-4385-8957-a678a76e860c">
                         <img src="assets/img/azure900.png">
                     </a>
