--- a/frontend/index.html
+++ b/frontend/index.html
@@ -276,7 +276,7 @@
                                 <li>ITCC 1376 - Routing & Switching Essentials</li>
                                 <li>ITCC 2378 - Scaling Networks</li>
                                 <li>ITCC 2379 - Connecting Networks</li>
-                                <li>ITCC 2375 - CCNA Collaboration</li>
+                                <li>ITCC 2375 - CCNA Collaboration I</li>
                                 <li>ITCC 1371 - CCNA Data Center I</li>
                                
                             </ul>
