--- a/frontend/index.html
+++ b/frontend/index.html
@@ -246,7 +246,7 @@
                             <div></div>
                             
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Sept - Oct 2022</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Sept 2022 - Oct 2022</span></div>
                     </div>
 
 
