commit update to index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -48,8 +48,8 @@
                          · Houston, Texas ·  
                         <a href="mailto:eunishap@gmail.com">eunishap@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Hi!  I am Nisha, a resourceful and strongly detail-oriented IT Engineer and cloud enthusiast with experience in the deployment and troubleshooting of Cisco and Microsoft Enterprise solutions.</p>
-                    <p> This page has been viewed <a id="counter"></a> times :)</p>
+                    <p class="lead mb-5">Hi!  I am Nisha, a resourceful and strongly detail-oriented IT Engineer and cloud enthusiast with experience in the deployment and troubleshooting of Cisco and Microsoft Enterprise solutions.
+                    and this page has been viewed <a id="counter"></a> times :) </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/nishaprudhomme/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Nisha318"><i class="fab fa-github"></i></a>
