--- a/frontend/index.html
+++ b/frontend/index.html
@@ -54,6 +54,7 @@
                         <a class="social-icon" href="https://www.linkedin.com/in/nishaprudhomme/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Nisha318"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://medium.com/@eunishap"><i class="fab fa-medium"></i></a>
+                        <a class="social-icon" href="https://www.youtube.com/channel/UCPSrBokxv9m6JLRx-08W8Ww"><i class="fa fa-youtube-play" style="font-size:36px"></i></a>
 
                     </div>
                 </div>
@@ -146,7 +147,7 @@
                             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                                 <div class="flex-grow-1">
                                     <h3 class="mb-0">Cloud Services</h3>
-                                    <div class="subheading mb-3"> <a href="https://github.com/Nisha318/Terraform-Azure-Configs/tree/main/Create%20a%20hub%20and%20spoke%20hybrid%20network%20topology%20in%20Azure%20using%20Terraform"> Hub-and-Spoke Network Topology</a> </div>
+                                    <div class="subheading mb-3"> <a href="https://github.com/Nisha318/Terraform-Azure-Configs/tree/main/Create%20a%20hub%20and%20spoke%20hybrid%20network%20topology%20in%20Azure%20using%20Terraform"> Hub-and-Spoke Network Topology Using Terraform</a> </div>
                                         <ul> 
                                           <li>Deployed a Hub and Spoke Network Topology to create virtual machines, virtual networks (VNets), subnets,
                                             virtual network gateways, gateway connections, peerings, NVA, network security groups, route tables, and
@@ -154,6 +155,17 @@
                                         </ul> 
                             </div>
                                 </div>
+
+                             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                                 <div class="flex-shrink-0"><span class="text-primary"></span></div>
+                                    <div class="flex-grow-1">
+                                        <div class="subheading mb-3"> <a href="Link"> SIEM Tutorial - Azure Sentinel Tutorial Map with Live Cyber Attacks!</a> </div>
+                                             <ul> 
+                                                  <li>Used custom PowerShell script to extract metadata from Windows Event Viewer to be forwarded to third party API in order to derive geolocation data </li> 
+                                                  <li>Configured Azure Sentinel (Microsoft's cloud SIEM) workbook to display global attack data (RDP brute force) on world map according to physical location and magnitude of attacks </li>
+                                                </ul> 
+                                    </div>   
+                                     </div>
         
                                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                                 <div class="flex-shrink-0"><span class="text-primary"></span></div>
@@ -161,7 +173,7 @@
                                     <div class="subheading mb-3">Cloud Resume Challenge </div>
                                          <ul> 
                                               <li>Created a CI/CD workflow on Github to deploy my resume as a static web site hosted on Microsoft Azure Cloud
-                                                Platform storage with integration of Azure DNS Delegation and Content Delivery Network (CDN) services. </li> 
+                                                Platform storage with integration of Azure DNS Delegation and Content Delivery Network (CDN) services </li> 
                                             </ul> 
                                 </div>   
                                  </div>
